# data-ingestion

.devcontainer/: devcontainer.json
data-ingestion/: pyproject.toml
data-ingestion/data_ingestion/: aws.py  base.py
